--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -33,3 +33,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
 }
+.page-home .top-rect {
+    padding-top: 500px;
+}
