--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -435,7 +435,7 @@ hr {
   margin: 10px 0 30px;
   height: 0; }
   hr.section-title-rule {
-    border-top: 2px solid #F5E830;
+    border-top: 2px solid #2db5a9;
     width: 100px;
     margin: 10px auto 30px; }
     .tint-reversed hr.section-title-rule {
