--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -945,6 +945,7 @@ section.testimonials {
 @media (min-width: 830px) {
   .page-home .home-hero .mission {
     font-size: 28px;
+    color: #fff;
     line-height: 1.38; }
   .page-home .home-hero .section-title-rule {
     display: block; }
