--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1223,3 +1223,9 @@ section.testimonials {
 .video-unit {
     cursor: pointer;
 }
+img.headeravatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-top: 10px;
+}
