--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -196,6 +196,7 @@ hr.section-title-rule {
     font-size: 12px;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.5);
+    margin-top: 26px;
 }
 .blue {
     color: #0067AF;
