--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -499,6 +499,7 @@ html.menu-open .menu-plate {
   padding: 20px 20px 40px; }
   .page-home .home-hero .mission {
     font-size: 21px;
+    color: #fff;
     font-weight: 400;
     margin-bottom: 20px;
     max-width: 300px; }
