--- a/404_files/style.css
+++ b/404_files/style.css
@@ -24,7 +24,7 @@ html{
 body{
     position: relative;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #fafafa;
 }
 
 h1, h2, h3, h4, h5, h6{
