--- a/404_files/style.css
+++ b/404_files/style.css
@@ -71,14 +71,14 @@ img{
     color: #ffffff;
     border: 0px solid;
     border-bottom: 2px solid;
-    border-color: #ef6d00;
+    border-color: #2db5a9;
     padding: 10px 41px;
     border-radius: 5px;
     background: none;
     text-transform: uppercase;
     display: inline-block;
     margin: 20px 20px 0 0;
-    background-color: #ff8000;
+    background-color: #2db5a9;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -88,9 +88,10 @@ img{
     cursor: pointer;
 }
 .btn:hover{
-    background: #ef6d00;
+    background: #249d92;
     color: #ffffff;
     text-decoration: none;
+    border-color: #249d92;
 }
 .btn-brown{
     border-color: #7b7b7b;
@@ -122,7 +123,7 @@ img{
     font-weight: 700;
     margin-top: 120px;
     line-height: 105px;
-    color: #f35d34;
+    color: #2db5a9;
     text-transform: uppercase;
 }
 
