--- a/404_files/style.css
+++ b/404_files/style.css
@@ -3,7 +3,7 @@
  - General setting
  - Button
  - Wrapper
- - Monkey
+ - Man
  - Info
  - Animationload
  - Animated setting
@@ -145,9 +145,9 @@ img{
 }
 
 /* ------------------
-    Monkey
+    Man
 --------------------*/
-.monkey{
+.man{
     margin-top: 50px;
 }
 
