--- a/404_files/style.css
+++ b/404_files/style.css
@@ -148,7 +148,8 @@ img{
     Man
 --------------------*/
 .man{
-    margin-top: 50px;
+    margin-top: -38px;
+    margin-left: -162px;
 }
 
 /* ------------------
