--- a/404_files/style.css
+++ b/404_files/style.css
@@ -25,6 +25,7 @@ body{
     position: relative;
     height: 100%;
     background-color: #fafafa;
+    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6{
