--- a/stylesheets/top.css
+++ b/stylesheets/top.css
@@ -6,7 +6,7 @@
     cursor:pointer;
     width:50px;
     height:50px;
-    background-color:#3498db;
+    background-color:#2db5a9;
     text-indent:-9999px;
     display:none;
     -webkit-border-radius:60px;
@@ -25,7 +25,7 @@
     border-bottom-color:#ffffff
 }
 #scroll:hover {
-    background-color:#e74c3c;
+    background-color:#1ca79b;
     opacity:1;filter:"alpha(opacity=100)";
     -ms-filter:"alpha(opacity=100)";
 }
