--- a/Stylesheets/Style.css
+++ b/Stylesheets/Style.css
@@ -1043,7 +1043,7 @@ a.article-title:hover {
     top: 0;
     left: 0;
     width: 100%;
-    height: auto
+    height: 100%
 }
 .plugin-preview-link {
     position: absolute;
