--- a/Stylesheets/Style.css
+++ b/Stylesheets/Style.css
@@ -1691,3 +1691,11 @@ table>thead>tr>th {
     border: 1px solid transparent;
     border-radius: 4px;
 }
+.add-pencil {
+    color: #bbb;
+    font-size: 24px;
+    line-height: 36px;
+    padding-left: 13px;
+    -webkit-transition: .2s;
+    transition: .2s;
+}
