--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ html, body{
 	padding:0px;
 	width:100%;
 	height:100%;
-	overflow:hidden;
 	font-family:'Raleway', sans-serif;
 	-webkit-perspective: 1000px;
 	-moz-perspective: 1000px;
@@ -57,8 +56,9 @@ html, body{
 	perspective-origin: 50% 50%;
 }
 .body-page {
-	overflow-y: scroll;
 	background-color: #19191b;
+	overflow: auto;
+	overflow-x: hidden;
 }
 a{
 	text-decoration:none;
@@ -1781,6 +1781,9 @@ h1#wordrotator{
 #mobile-nav-toggle {
     top: 45px;
 }
+* {
+	-webkit-font-smoothing: antialiased;
+}
 
 /*-- ===================================================== --*
 	13.0 STYLE FOR SMALL DEVICES
@@ -1854,6 +1857,7 @@ h1#wordrotator{
 		font-size:16px;
 		text-transform:uppercase;
 		letter-spacing:2px;
+		color: #fff;
 	}
 	nav.top-nav a{
 		top:0%;
